k8s/overlays/streamlit1/app-port-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      containers:
      - name: app
        ports:
        - containerPort: 8501  

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  ports:
  - name: http
    port: 80          
    targetPort: 8501
