k8s/overlays/streamlit1/app-streamlit-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      containers:
      - name: app
        image: registry.yu-min.k8s.local/streamlit:latest
        ports:
        - containerPort: 8501  # Streamlitポート
        livenessProbe:
          httpGet:
            path: /_stcore/health
            port: 8501
        readinessProbe:
          httpGet:
            path: /_stcore/health
            port: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: streamlit1
  ports:
  - name: http
    port: 80
    targetPort: 8501  # Streamlitポート
