k8s/overlays/streamlit1/oauth2-proxy-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit1-oauth2-proxy
spec:
  selector:
    matchLabels:
      app: streamlit1-oauth2-proxy
  template:
    metadata:
      labels:
        app: streamlit1-oauth2-proxy 
    spec:
      containers:
      - name: oauth2-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-service
spec:
  selector:
    app: streamlit1-oauth2-proxy
